refactor(quality): fix remaining SonarCloud code smells